src/main/resources/minecraft_on_ecs.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Creating ECS service

Parameters:
  Memory:
    Type: Number
    Description: How many GB of RAM to give the server
    Default: 2048
  CPU:
    Type: Number
    Description: How many cores to give the server
    Default: 1024
  StackName:
    Type: String
    Description: The name of this stack
    Default: example-server
  Type:
    Type: String
    Description: Forge, modded or vanilla
    Default: vanilla
  Version:
    Type: String
    Description: The version to use
    Default: LATEST
  FTBModPackId:
    Type: String
    Description: FTB modpack Id
    Default: -1
  FTBModPackVersionId:
    Type: String
    Description: FTB modpack version Id
    Default: -1
  Ops:
    Type: String
    Description: 'List of ops ex: user1,user2'
    Default: ''
  OnOffSwitch:
    Type: Number
    Description: 0 for off 1 for on
    Default: 1

Conditions:
  IsFTB:
    !Equals [ !Ref Type, "FTBA" ]

Resources:
  MountVpc:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock: 10.0.0.0/16
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    DependsOn: MountVpc
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref MountVpc
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MountVpc
  PublicRoute1:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  MountSubnetOne:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.1.0/24
      VpcId: !Ref MountVpc
      AvailabilityZone: "us-west-2a"
  MountSubnetTwo:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.2.0/24
      VpcId: !Ref MountVpc
      AvailabilityZone: "us-west-2b"
  MountSubnetOneRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref MountSubnetOne
      RouteTableId: !Ref PublicRouteTable
  MountSubnetTwoRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref MountSubnetTwo
      RouteTableId: !Ref PublicRouteTable
  SecurtiyGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 25565
      ToPort: 25565
      CidrIp: 0.0.0.0/0
      GroupId: !GetAtt MountVpc.DefaultSecurityGroup
  LogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Ref StackName
      RetentionInDays: 7

  FileSystem:
    Type: AWS::EFS::FileSystem
  MountTargetOne:
    Type: AWS::EFS::MountTarget
    Properties:
      FileSystemId: !Ref FileSystem
      SubnetId: !Ref MountSubnetOne
      SecurityGroups:
        - !GetAtt MountVpc.DefaultSecurityGroup
  MountTargetTwo:
    Type: AWS::EFS::MountTarget
    Properties:
      FileSystemId: !Ref FileSystem
      SubnetId: !Ref MountSubnetTwo
      SecurityGroups:
        - !GetAtt MountVpc.DefaultSecurityGroup
  Cluster:
    Type: AWS::ECS::Cluster
    Properties:
      CapacityProviders:
        - FARGATE
        - FARGATE_SPOT
      DefaultCapacityProviderStrategy:
        - CapacityProvider: FARGATE
          Weight: 1
        - CapacityProvider: FARGATE_SPOT
          Weight: 1
  ExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Join [ '', [ !Ref StackName, ExecutionRole ] ]
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: 'sts:AssumeRole'
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy'
  TaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      Cpu: !Ref CPU
      Memory: !Ref Memory
      ExecutionRoleArn: !Ref ExecutionRole
      ContainerDefinitions:
        - Name: !Ref StackName
          Essential: true
          Image: !If [IsFTB, "itzg/minecraft-server:java8-multiarch", "itzg/minecraft-server:multiarch-latest" ]
          Environment:
            - Name: EULA
              Value: true
            - Name: MOTD
              Value: "Beep Boop. Turn me off when your done"
            - Name: ENABLE_AUTOPAUSE
              Value: false
            - Name: OPS
              Value: !Ref Ops
            - Name: Version
              Value: !Ref Version
            - Name: TYPE
              Value: !Ref Type
            - Name: MEMORY
              Value: !Join [ '', [ !Ref Memory, 'M' ] ]
            - Name: FTB_MODPACK_ID
              Value: !Ref FTBModPackId
            - Name: FTB_MODPACK_VERSION_ID
              Value: !Ref FTBModPackVersionId
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-region: us-west-2
              awslogs-group: !Ref LogGroup
              awslogs-stream-prefix: !Ref StackName
          PortMappings:
            - ContainerPort: 25565
              HostPort: 25565
          MountPoints:
            - SourceVolume: "efs-vol"
              ContainerPath: /data
      Volumes:
        - Name: "efs-vol"
          EFSVolumeConfiguration:
            FilesystemId: !Ref FileSystem

  Service:
    Type: AWS::ECS::Service
    DependsOn:
      - PublicRoute1
      - MountTargetOne
      - MountTargetTwo
    Properties:
      Cluster: !Ref Cluster
      LaunchType: FARGATE
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 100
      DesiredCount: !Ref OnOffSwitch
      TaskDefinition: !Ref TaskDefinition
      PlatformVersion: 1.4.0
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          Subnets:
            - !Ref MountSubnetOne
            - !Ref MountSubnetTwo
          SecurityGroups:
            - !GetAtt MountVpc.DefaultSecurityGroup
      ServiceName: !Ref StackName

Outputs:
  ClusterName:
    Value: !Ref Cluster
